<resources>
    <string name="app_name">MyCalculator2</string>
    <string name="button_c">CE</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_dian">.</string>
    <string name="button_jia">+</string>
    <string name="button_jian">-</string>
    <string name="button_cheng">X</string>
    <string name="button_chu">÷</string>
    <string name="button_zf">←</string>
    <string name="button_deng">=</string>
    <string name="button_b">%</string>
    <string name="button_zuo">(</string>
    <string name="button_you">)</string>
    <string name="button_sin">sin</string>
    <string name="button_tan">tan</string>
    <string name="button_cos">cos</string>
    <string name="about">关于本app</string>
    <string name="rate">汇率转换</string>
    <string name="system">进制转化</string>

</resources>

