<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        app:showAsAction="never"
        android:id="@+id/menu_rate"
        android:title="@string/rate"
        />
    <item

        app:showAsAction="never"
        android:id="@+id/menu_system"
        android:title="@string/system"
        />
    <item

        app:showAsAction="never"
        android:id="@+id/menu_length"
        android:title="长度转换"
        />
    <item

        app:showAsAction="never"
        android:id="@+id/menu_volume"
        android:title="体积转换"
        />
    <item

        app:showAsAction="never"
        android:id="@+id/menu_about"
        android:title="@string/about"
        />

</menu>