<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_view_rate1"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="80sp"
                    android:autoSizeMinTextSize="40sp"
                    android:autoSizePresetSizes="6sp"
                    android:autoSizeTextType="uniform"
                    android:textColor="@color/orange"
                    android:text="请在此处输入内容"
                />
                <Spinner
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:entries="@array/country"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">
                <TextView
                    android:id="@+id/text_view_rate2"

                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="80sp"
                    android:autoSizeMinTextSize="40sp"
                    android:autoSizePresetSizes="6sp"
                    android:autoSizeTextType="uniform"
                    android:text="0.0"
                    />
                <Spinner
                    android:id="@+id/country2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:entries="@array/country"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">
                <TextView
                    android:id="@+id/text_view_rate3"

                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="80sp"
                    android:autoSizeMinTextSize="40sp"
                    android:autoSizePresetSizes="6sp"
                    android:autoSizeTextType="uniform"
                    android:text="0.0"
                    />
                <Spinner
                    android:id="@+id/country3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:entries="@array/country"/>
            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_7"
                    android:textSize="50dp" />
                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_4"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_1"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_999"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="@string/button_7"
                    android:textSize="50sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_8"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_5"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_2"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_0"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_9"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_6"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_3"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_dian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_dian"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_c"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_zf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/orange"
                    android:text="@string/button_zf"
                    android:textSize="50sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>