<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SystemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_view_system1"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="80sp"
                    android:autoSizeMinTextSize="40sp"
                    android:autoSizePresetSizes="6sp"
                    android:autoSizeTextType="uniform"
                    android:textColor="@color/orange"
                    android:text="请输入一个十进制的数字"
                    />
                <Spinner
                    android:id="@+id/system"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:entries="@array/system"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">
                <TextView
                    android:id="@+id/text_view_system2"

                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="80sp"
                    android:autoSizeMinTextSize="40sp"
                    android:autoSizePresetSizes="6sp"
                    android:autoSizeTextType="uniform"
                    android:text="0.0"
                    />
                <Spinner
                    android:id="@+id/system2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:entries="@array/system"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">
                <TextView
                    android:id="@+id/text_view_system3"

                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="80sp"
                    android:autoSizeMinTextSize="40sp"
                    android:autoSizePresetSizes="6sp"
                    android:autoSizeTextType="uniform"
                    android:text="0.0"
                    />
                <Spinner
                    android:id="@+id/system3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:entries="@array/system"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/A"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="A"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/B"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="B"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/C"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="C"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/D"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="D"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/E"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="E"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/F"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="F"
                    android:textSize="20dp"/>
            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_7"
                    android:textSize="40dp" />
                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_4"
                    android:textSize="40sp" />
                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_1"
                    android:textSize="40sp" />
                <Button
                    android:id="@+id/button_999"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="@string/button_7"
                    android:textSize="40dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_8"
                    android:textSize="40dp" />
                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_5"
                    android:textSize="40dp" />
                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_2"
                    android:textSize="40dp" />
                <Button
                    android:id="@+id/button_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_0"
                    android:textSize="40dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_9"
                    android:textSize="40dp" />
                <Button
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_6"
                    android:textSize="40dp" />
                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_3"
                    android:textSize="40dp" />
                <Button
                    android:id="@+id/button_998"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="@string/button_7"
                    android:textSize="40dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/button_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_c"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50sp" />
                <Button
                    android:id="@+id/button_zf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/orange"
                    android:text="@string/button_zf"
                    android:textSize="50sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>